# brianhardin.info

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  README.md  TEMPLATE_DEBUGGING.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  render.yaml  tailwind.config.js
.github/workflows/: ci.yml
app/: config.py  main.py  middleware.py
app/admin/: dependencies.py
app/database/: __init__.py  connection.py  models.py
app/models/: blog.py  contact.py  demo.py  project.py
app/routers/: admin.py  api.py  auth.py  blog.py  demos.py  pages.py  projects.py
app/scripts/: seed.py
app/services/: blog.py  blog_db.py  contact_db.py  db_adapters.py  demo.py  email.py  project.py  project_db.py  settings_db.py  websocket.py
app/templates/: about.html  base.html  contact.html  index.html  project_detail.html  project_detail.html.backup  projects.html  resume.html
content/blog/: api-design-for-internal-business-systems.md  asc-606-for-engineers-what-you-need-to-know.md  asc-842-lease-accounting-the-implementation-nobody-enjoyed.md  async-python-in-production-lessons-from-real-workloads.md  automating-invoice-disputes-from-72-hours-to-15-minutes.md  building-a-collections-strategy-that-doesnt-destroy-customer-relationships.md  (+27 more)
src/: App.js
testing/: package-lock.json  package.json  test_dark_mode.js
tests/: conftest.py  test_admin_blog.py  test_admin_messages.py  test_admin_projects.py  test_auth.py  test_blog.py  test_dark_mode.py  test_database.py  test_demos.py  test_main.py  test_security.py
(+75 files in other folders)
